mass updates to responsive and fix to grid on Safari!!

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ h1 {
   	display: flex;
 	-webkit-flex-direction: column;
 	flex-direction: column;
+    -webkit-align-items: center;
     align-items: center;
     justify-content: center;	
 	height: 275px;
@@ -89,13 +90,14 @@ h1 {
     font-weight: 300;
     line-height: 1.0em;	
     color: white;
+    margin: 15px;
 }
 
 .title img {
 	max-width: 90px;
 	max-height: 45px;
 	height: auto;
-	margin: 5px;
+	margin: 15px 0px 5px 0px;
 }
 
 .title:hover {
@@ -166,6 +168,7 @@ p.job-title, p.job-company, p.description {
 	-webkit-flex-direction: row;
 	flex-direction: row;
 	flex-flow: row wrap;
+	-webkit-flex-flow: row wrap;
 	margin-bottom: 40px;
 }
 
@@ -188,8 +191,6 @@ p.job-title, p.job-company, p.description {
 	margin-top: 20px;
 	padding-bottom: 10px;	
 	border: 1px solid #f1f1f1;
-	-webkit-flex: 1 0 auto;
-	flex: 1 0 auto;
 }
 
 /*.card:last-child {
@@ -202,7 +203,6 @@ p.job-title, p.job-company, p.description {
 }
 
 .card img {
-	overflow: hidden;
 	height: 200px;
 	width: 240px;
 	margin: 0px;
@@ -253,10 +253,16 @@ p.job-title, p.job-company, p.description {
 	-webkit-flex-direction: row;
 	flex-direction: row;
 	align-items: center;
+	-webkit-align-items: center;
     padding: 20px;
     margin-bottom: 40px;
 	background-color: cadetblue;
 	color: white;
+}
+
+.case-study-details div {
+	flex: 1;
+	-webkit-flex: 1;
 }
 
 h3.case-study-title {
@@ -357,7 +363,8 @@ p.caption {
         flex-direction: column;
     }
  	nav {
-        min-height: auto;
+        min-height: 300px;
+        max-width: 800px
     }
 
 nav a {
@@ -366,14 +373,14 @@ nav a {
     } 
 
     .title {
-    	height: 80px;
+    	height: 120px;
     }
 
     .title p {
     	font-size: 3em;
     }
 
-    .title p img {
+    .title img {
     	display: none;
     }
 
@@ -383,6 +390,7 @@ nav a {
 
     .main p {
     	font-size: 1.5em;
+    	line-height: 1.0em;
     }
 
     h1 {
@@ -392,15 +400,26 @@ nav a {
     .grid {
     	-webkit-flex-direction: column;
     	flex-direction: column;
+    	-webkit-align-items: center;
     	align-items: center;
     }
 
     .card {
 
     }
-    
+
     .back {
     	margin-left: -10px;
+    	margin-top: 10px;
+    }
+
+    .case-study-details div {
+    	align-items: 1;
+
+    }
+
+    p.caption {
+    	font-size: 1.0em;
     }
 }
 
